# udp-server-smartbridges

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
config/: udp_config.c
db/: databaseManager.py  scheme-database.sql
docs/html/: annotated.html  annotated_dup.js  classes.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  navtreedata.js  navtreeindex0.js
docs/html/d0/d29/: main_8c.html
docs/html/d1/d4f/: udp__handler_8c.html  udp__handler_8c.js
docs/html/d1/df4/: structRequest-members.html
docs/html/d2/db5/: db_8c.html  db_8c.js
docs/html/d3/d91/: utils_8c.html  utils_8c.js
docs/html/d3/df0/: udp__config_8c.html  udp__config_8c.js
docs/html/d3/df6/: structSensorConfig.html  structSensorConfig.js
docs/html/d5/d60/: utils_8h.html  utils_8h.js  utils_8h_source.html
docs/html/d7/d08/: udp__handler_8h.html  udp__handler_8h.js  udp__handler_8h_source.html
docs/html/d8/d61/: udp__config_8h.html  udp__config_8h.js  udp__config_8h_source.html
docs/html/da/d4e/: db_8h.html  db_8h.js  (+1 more)
docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  files_2.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js
include/: db.h  udp_config.h  udp_handler.h  utils.h
src/: db.c  main.c  udp_handler.c  utils.c
(+3 files in other folders)
